@@ -7,6 +7,10 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
+
+// No direct access
+defined('JPATH_BASE') or die();
+
 /**
  * Create the response global object
  */
