@@ -6,6 +6,9 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
+// No direct access
+defined('JPATH_BASE') or die;
+
 /**
  * Version information.
  *
